--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,24 @@
 <resources>
+
     <string name="app_name">eclo AR</string>
     <string name="metaioSDKSignature">g2ofq70ZiXzyGyMkgY/hdCISCqejaceSRgvsl+6OEjs=</string>
     <string name="airvantage_clientId">be1a35d64b6547aa8dd0a8a8f90a68dc</string>
-    <string name="airvantage_clientSecret">697ae4e54e7d4e0d976f313871a63c89</string> 
+    <string name="airvantage_clientSecret">697ae4e54e7d4e0d976f313871a63c89</string>
+    <string name="app_id">559736607426632</string>
+    <string name="pref_login">login</string>
+    <string name="pref_password">password</string>
 
-	<string name="app_id">559736607426632</string>
-	<string name="pref_login">login</string>
-	<string name="pref_password">password</string>
+    <string-array name="sensor_types">
+        <item>Temperature</item>
+        <item>Luminosity</item>
+        <item>Humidity</item>
+        <item>Generic</item>
+    </string-array>
+    <string-array name="sensor_types_keys">
+        <item>TEMPERATURE</item>
+        <item>LUMINOSITY</item>
+        <item>HUMIDITY</item>
+        <item>GENERIC</item>
+    </string-array>
+
 </resources>
